examples/busybox-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: busybox-pod
spec:
  containers:
  - name: main-container
    image: nginx
  - name: busybox-container
    image: busybox
    command: ["sh", "-c", "sleep 3600"]
