examples/deployment-update-2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-web
  labels:
    name: nodejs-web
  annotations:
    kubernetes.io/change-cause: "Initial deployment of nodejs-web version 2.0"
spec:
  replicas: 3
  selector:
    matchLabels:
      name: nodejs-web
  template:
    metadata:
      name: nodejs-web
      labels:
        name: nodejs-web
    spec:
      containers:
        - name: nodejs-web
          image: sigitkurniawan0207/nodejs-web:2
          ports:
            - containerPort: 3000
