examples/mysql-phpmyadmin-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mysql-phpmyadmin
  labels:
    app: mysql-phpmyadmin
spec:
  containers:
  - name: mysql
    image: mysql:5.7
    ports:
    - containerPort: 3306
      name: mysql
  - name: phpmyadmin
    image: phpmyadmin/phpmyadmin
    ports:
    - containerPort: 80
      name: phpmyadmin
