examples/nginx-namespace.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-with-namespace
  labels:
    app: webserver
    environment: production
spec:
  containers:
    - name: nginx
      image: nginx
      ports:
        - containerPort: 80
