examples/nodejs-env-2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nodejs-writer-env2
  labels:
    name: nodejs-writer-env2
spec:
  volumes:
    - name: html
      emptyDir: {}
  containers:
    - name: nodejs-writer-env2
      image: sigitkurniawan0207/nodejs-writer:v1.2
      ports:
        - containerPort: 3000
      volumeMounts:
        - mountPath: /app/folder-from-env
          name: html
