examples/nodejs-volume-2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nodejs-writer2
  labels:
    name: nodejs-writer2
spec:
  volumes:
    - name: html
      emptyDir: {}
  containers:
    - name: nodejs-writer2
      image: khannedy/nodejs-writer
      volumeMounts:
        - mountPath: /mnt/app
          name: html
