examples/pod-multi-container.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mysql-phpmyadmin-pod
  labels:
    app: mysql-phpmyadmin
spec:
  containers:
  - name: mysql
    image: mysql:5.7
    ports:
    - containerPort: 3306
    volumeMounts:
    - mountPath: /var/lib/mysql
      name: mysql-data

  - name: phpmyadmin
    image: phpmyadmin/phpmyadmin
    ports:
    - containerPort: 80

  volumes:
  - name: mysql-data
    emptyDir: {}
