examples/pod-nodejs-configmap.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nodejs-env
  labels:
    name: nodejs-env
spec:
  volumes:
    - name: html
      emptyDir: {}
  containers:
    - name: nodejs-env
      image: sigitkurniawan0207/nodejs-env
      ports:
        - containerPort: 3000
      volumeMounts:
        - mountPath: /app/folder-from-env
          name: html
