examples/nginx-custom-rs-svc.yaml

apiVersion: v1
kind: Service
metadata:
  name: nginx-custom-service
spec:
  selector:
    name: nginx-custom
  ports:
    - port: 8080
      targetPort: 80

---

apiVersion: v1
kind: Pod
metadata:
  name: curl
  labels:
    name: curl
spec:
  containers:
    - name: curl
      image: khannedy/nginx-curl
