examples/nginx-custom-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-custom-service
spec:
  selector:
    name: nginx-custom
  ports:
    - port: 8080
      targetPort: 80
