examples/nodejs-configmap.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nodejs-env
  labels:
    name: nodejs-env
spec:
  volumes:
    - name: html
      emptyDir: {}
  containers:
    - name: nodejs-env
      image: sigitkurniawan0207/nodejs-env
      ports:
        - containerPort: 3000
      volumeMounts:
        - mountPath: /app/folder-from-env
          name: html
---

apiVersion: v1
kind: Service
metadata:
  name: nodejs-env-service
spec:
  type: NodePort
  selector:
    name: nodejs-env
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30001
