examples/service-vue-app-employee.yaml
apiVersion: v1
kind: Service
metadata:
  name: vue-app-service
spec:
  selector:
    app: vue-app
  ports:
    - port: 8088
      targetPort: 80
