examples/nginx-ingress-multi-host.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress-multi
  labels:
    name: nginx-ingress-multi
spec:
  ingressClassName: nginx
  rules:
    - host: nginx.latihan.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 80
          - path: /accepted
            pathType: Prefix
            backend:
              service:
                name: nginx-custom-service
                port:
                  number: 8088

    - host: app.latihan.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vue-app-service
                port:
                  number: 8088
