examples/nginx-vue-service-ingress-multi-host.yaml
# Pod untuk nginx, nginx-custom, dan vue-app

apiVersion: v1
kind: Pod
metadata:
  name: nginx-app
  labels:
    app: nginx
spec:
  containers:
  - name: nginx
    image: nginx
    ports:
    - containerPort: 80

---

apiVersion: v1
kind: Pod
metadata:
  name: nginx-custom-app
  labels:
    app: nginx-custom
spec:
  containers:
  - name: nginx-custom
    image: sigitkurniawan0207/nginx-custom:v1
    ports:
    - containerPort: 80

---

apiVersion: v1
kind: Pod
metadata:
  name: vue-app
  labels:
    app: vue-app
spec:
  containers:
  - name: vue-app-employee
    image: sigitkurniawan0207/vue-app-employee:v1.0
    ports:
    - containerPort: 80

---

# service untuk nginx-service, nginx-custom-service, dan vue-app-service

apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    app: nginx
  ports:
    - port: 8080
      targetPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: nginx-custom-service
spec:
  selector:
    app: nginx-custom
  ports:
    - port: 8088
      targetPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: vue-app-service
spec:
  selector:
    app: vue-app
  ports:
    - port: 8088
      targetPort: 80

---

# ingress untuk ketiga service diatas

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress-multi
  labels:
    name: nginx-ingress-multi
spec:
  ingressClassName: nginx
  rules:
    - host: nginx.latihan.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 8088
          - path: /accepted
            pathType: Prefix
            backend:
              service:
                name: nginx-custom-service
                port:
                  number: 8088

    - host: app.latihan.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vue-app-service
                port:
                  number: 8088
